# OIM

./: .gitignore  README.md  a  test.c  test.c~
dm1/: rapportOIM.odt  timings.txt
dm3/OIM-LancerDeRayons-2014/coreraytracer/: CMakeLists.txt  cone.hpp  glass.hpp  image.hpp  isect.hpp  raytracing.cpp  raytracing.h  sphere.hpp  texture.cpp  texture.hpp  vector3d.hpp
dm3/tp6/OIM-LancerDeRayons-2014 (2)/: CMakeLists.txt
dm3/tp6/OIM-LancerDeRayons-2014 (2)/coreraytracer/: box.hpp  bsdf.hpp  camera.hpp  csg.hpp  cylinder.hpp  diff_geom.hpp  geometry.hpp  glossy.hpp  intervaloperators.cpp  intervalset.hpp  light.hpp  metal.hpp  plane.hpp  primitive.hpp  ray.hpp  texture.cpp
dm3/tp6/OIM-LancerDeRayons-2014 (2)/doc/html/: a00001.html  a00003.html  a00003.js  a00004_a8f8332814cea35a037da663f820cae0b_cgraph.md5  a00004_ae9726a96fc8d4b778bcfd9ba8fd693a1_cgraph.map  a00005.html  a00005_a072b04d8fc38b94911e023dcb3a0c28f_icgraph.md5  a00005_a0c1293b4a879f5797f9befcaef2c4c99_cgraph.md5  a00005_a0c1293b4a879f5797f9befcaef2c4c99_icgraph.md5  a00005_a269624a07342f9d2ea5c9c71b10d0797_icgraph.md5  a00005_a40748b3fdb9139f3819660637a127172_icgraph.md5  a00005_a5721ae7c30efb1e90beb7ea6b49d9ca4_cgraph.map  a00005_a5721ae7c30efb1e90beb7ea6b49d9ca4_icgraph.map  a00005_a654638fb3e8f649825aea76416fe5a6d_cgraph.map  a00005_a770df55c2f2ba844764b341e93ea41f7_icgraph.md5  a00005_a9dd8bf6529b8cc159f570600bbee872c_cgraph.map  a00005_a9dd8bf6529b8cc159f570600bbee872c_icgraph.md5  a00005_aaa834a440a78af61ef56984c3fcc79f8_icgraph.map  a00005_abc0d4c3f673c7eab346a625678cec31f_cgraph.map  a00005_aca1d179bc6d6a06b395f8768019cc4f0_icgraph.map  a00006_a8206d3f96cc607fbd43037ef017defc2_icgraph.map  a00006_a98275b6232248a9c1691cd9500d8134d_icgraph.map  a00007.html  a00007_a53c38c4d10fe8f465cdc18843c8c7811_cgraph.md5  a00007_a9a742cbe9f9f4037f5d9f4e81a9b2428_icgraph.md5  a00007_addd9a00e50cad82c55c405c9683da443_icgraph.md5  a00008.js  (+313 more)
dm3/tp6/OIM-LancerDeRayons-2014 (2)/main/: CMakeLists.txt  main.cpp  texturefetch.cpp
(+1043 files in other folders)
